<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:padding="@dimen/margin_padding_24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Logo o imagen -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_200"
                android:layout_marginBottom="@dimen/margin_padding_32"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_post" />

            <!-- Título -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_24"
                android:text="Bienvenido"
                android:textColor="@color/primary500"
                android:textSize="@dimen/font_28"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_16"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/margin_padding_8"
                app:boxCornerRadiusBottomStart="@dimen/margin_padding_8"
                app:boxCornerRadiusTopEnd="@dimen/margin_padding_8"
                app:boxCornerRadiusTopStart="@dimen/margin_padding_8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_24"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/margin_padding_8"
                app:boxCornerRadiusBottomStart="@dimen/margin_padding_8"
                app:boxCornerRadiusTopEnd="@dimen/margin_padding_8"
                app:boxCornerRadiusTopStart="@dimen/margin_padding_8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón login -->

            <!-- Texto para mostrar error -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary500"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_padding_12"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <!-- Texto para mostrar error -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_padding_12"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
