<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.pokemondetail.PokemonDetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_button_image"
            android:layout_width="@dimen/margin_padding_32"
            android:layout_height="@dimen/margin_padding_32"
            android:tint="@color/primary500"
            android:src="@drawable/ic_arrow_left" />

        <!-- Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_padding_16"
            android:shadowColor="@color/black"
            android:text="@string/detail"
            android:textAppearance="@style/bodyPrimary16Text"
            android:textColor="@color/primary500"
            android:textSize="@dimen/font_16" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/container_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_padding_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_8"
            android:background="@drawable/card_background"
            android:clipToPadding="false"
            android:elevation="@dimen/margin_padding_8"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/margin_padding_24">

            <!-- Imagen del Pokémon con sombra y borde -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPokemon"
                android:layout_width="@dimen/width_220"
                android:layout_height="@dimen/height_220"
                android:layout_marginBottom="@dimen/margin_padding_20"
                android:background="@drawable/image_border_shadow"
                android:scaleType="fitCenter" />

            <!-- Nombre -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_16"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="Nombre"
                android:textColor="#FFCB05"
                android:textSize="@dimen/font_28"
                android:textStyle="bold" />

            <!-- Altura -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8"
                android:text="@string/height_label"
                android:textAppearance="@style/bodyPrimary16Text" />

            <!-- Peso -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_8"
                android:text="@string/weight_label"
                android:textAppearance="@style/bodyPrimary16Text" />

            <!-- Tipos con fondo colorido -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_12"
                android:layout_marginBottom="@dimen/margin_padding_8"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="@dimen/margin_padding_12"
                android:paddingVertical="@dimen/margin_padding_6"
                android:text="Types: None"
                android:textColor="@color/white"
                android:textSize="@dimen/font_18" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
